--- a/config/config.yaml
+++ b/config/config.yaml
@@ -39,7 +39,7 @@ app:
 #
 # 详细时间线图请查看 config/timeline.yaml
 # ===============================================================
-schedule:
+schedule: "*/30 * * * *"
   enabled: true                         # 是否启用调度系统
   preset: "morning_evening"             # 预设模板名称（见上方说明）
 
@@ -155,7 +155,7 @@ rss:
 #    • 适用场景：避免重复信息干扰
 # ===============================================================
 report:
-  mode: "current"                     # 可选: daily | current | incremental
+  mode: incremental                     # 可选: daily | current | incremental
                                       # ⚠️ 开启调度系统后，此值会被当前时间段的 report_mode 覆盖
 
 
