--- a/config/config.yaml
+++ b/config/config.yaml
@@ -39,7 +39,7 @@ app:
 #
 # 详细时间线图请查看 config/timeline.yaml
 # ===============================================================
-schedule: "*/30 * * * *"
+schedule: "0 * * * *"
   enabled: true                         # 是否启用调度系统
   preset: "morning_evening"             # 预设模板名称（见上方说明）
 
